--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -8,6 +8,14 @@ edition = "2018"
 
 [dependencies]
 hyper = "0.13"
-tokio = { version = "0.2", features = ["full"] }
+tokio = { version = "0.2.11", features = ["full"] }
 futures-util = { version = "0.3", default-features = false }
-pretty_env_logger = "0.4"
+env_logger = "0.7.1"
+diesel = { version = "1.4.4", features = ["chrono", "postgres", "r2d2", "uuidv07", "serde_json"] }
+dotenv = "0.15.0"
+jsonwebtoken = "7.0.1"
+serde = "1.0.91"
+serde_derive = "1.0.104"
+
+db = { package = "db", path = "./src/db" }
+domain = { package = "domain", path = "./src/domain" }
