--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@fullhuman/postcss-purgecss": "^2.1.2",
     "page": "^1.11.5",
-    "sirv-cli": "^0.4.4"
+    "sirv-cli": "^0.4.4",
+    "svelte-awesome": "^2.3.0",
   }
 }
