renamed project, backgrounds + removed unused files

--- a/backend/.env
+++ b/backend/.env
@@ -1,9 +1,9 @@
-COMPOSE_PROJECT_NAME=rustappoint
+COMPOSE_PROJECT_NAME=today
 
-POSTGRES_DB=rustappoint_db
-POSTGRES_USER=rustappoint_user
-POSTGRES_PASSWORD=rustappoint_pass
+POSTGRES_DB=today_db
+POSTGRES_USER=today_user
+POSTGRES_PASSWORD=today_pass
 
 DATABASE_URL=postgres://${POSTGRES_USER}:$POSTGRES_PASSWORD@localhost/$POSTGRES_DB
 BIND_ADDRESS=127.0.0.1:8088
-JWT_SECRET=rustappoint_secret
+JWT_SECRET=today_secret
