--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "rustappoint"
+name = "today"
 version = "0.1.0"
 authors = ["Vladimir Ćirković <wladimir.cirkovic@gmail.com>"]
 edition = "2018"
