--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-COMPOSE_PROJECT_NAME=rustappoint
+COMPOSE_PROJECT_NAME=today
 
-POSTGRES_DB=rustappoint_db
-POSTGRES_USER=rustappoint_user
-POSTGRES_PASSWORD=rustappoint_pass
+POSTGRES_DB=today_db
+POSTGRES_USER=today_user
+POSTGRES_PASSWORD=today_pass
