--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3"
 services:
   db:
     image: postgres:12.2
-    restart: "always"
+    restart: always
     ports:
       - 5432:5432
     env_file:
