--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -7,9 +7,8 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-hyper = "0.13"
+warp = "0.2.1"
 tokio = { version = "0.2.11", features = ["full"] }
-futures-util = { version = "0.3", default-features = false }
 env_logger = "0.7.1"
 diesel = { version = "1.4.4", features = ["chrono", "postgres", "r2d2", "uuidv07", "serde_json", "extras"] }
 r2d2 = "0.8.8"
