--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,14 +11,14 @@
     "@rollup/plugin-node-resolve": "^7.0.0",
     "postcss": "^7.0.27",
     "postcss-load-config": "^2.1.0",
-    "rollup": "^1.20.0",
+    "prettier": "^2.0.5",
+    "rollup": "^1.12.0",
     "rollup-plugin-livereload": "^1.0.0",
     "rollup-plugin-svelte": "^5.0.3",
     "rollup-plugin-terser": "^5.1.2",
     "svelte": "^3.0.0",
     "svelte-preprocess": "^3.7.1",
-    "tailwindcss": "^1.2.0",
-    "rollup": "^1.12.0"
+    "tailwindcss": "^1.2.0"
   },
   "dependencies": {
     "@fullhuman/postcss-purgecss": "^2.1.2",
