--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "build": "rollup -c",
     "dev": "rollup -c -w",
-    "start": "sirv public --single"
+    "start": "sirv public --single",
+    "format": "./node_modules/.bin/prettier --write --svelte-sort-order scripts-markup-styles ./**/*.{svelte,js}"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^11.0.0",
@@ -12,6 +13,7 @@
     "postcss": "^7.0.27",
     "postcss-load-config": "^2.1.0",
     "prettier": "^2.0.5",
+    "prettier-plugin-svelte": "^0.7.0",
     "rollup": "^1.12.0",
     "rollup-plugin-livereload": "^1.0.0",
     "rollup-plugin-svelte": "^5.0.3",
