--- a/node-backend/package.json
+++ b/node-backend/package.json
@@ -7,6 +7,31 @@
   "dependencies": {
     "knex": "^0.21.0",
     "objection": "^2.1.3",
-    "pg": "^8.0.3"
+    "pg": "^8.0.3",
+    "tslint-config-airbnb": "^5.11.2"
+  },
+  "scripts": {
+    "dev": "NODE_ENV=development webpack",
+    "build": "webpack",
+    "lint": "eslint --ignore-path .gitignore --ext .ts src",
+    "lint:fix": "eslint --ignore-path .gitignore --ext .ts --fix src",
+    "test": "jest"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^2.30.0",
+    "@typescript-eslint/parser": "^2.30.0",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.3",
+    "jest": "^25.4.0",
+    "nodemon": "^2.0.3",
+    "nodemon-webpack-plugin": "^4.3.1",
+    "prettier": "^2.0.5",
+    "ts-loader": "^7.0.1",
+    "tslint": "^6.1.2",
+    "typescript": "^3.8.3",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11",
+    "webpack-node-externals": "^1.7.2"
   }
 }
