--- a/node-backend/package.json
+++ b/node-backend/package.json
@@ -7,8 +7,7 @@
   "dependencies": {
     "knex": "^0.21.0",
     "objection": "^2.1.3",
-    "pg": "^8.0.3",
-    "tslint-config-airbnb": "^5.11.2"
+    "pg": "^8.0.3"
   },
   "scripts": {
     "dev": "NODE_ENV=development webpack",
@@ -29,6 +28,7 @@
     "prettier": "^2.0.5",
     "ts-loader": "^7.0.1",
     "tslint": "^6.1.2",
+    "tslint-config-airbnb": "^5.11.2",
     "typescript": "^3.8.3",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
